MyOnTimeTeam/Content/Site.css
/* ... */
@media (min-width: 1400px) {
    .responsive-grid > div {
        width: 31.623931623931625%;
    }

        .responsive-grid > div:nth-child(3n+1) {
            margin-left: 0;
        }
}

@media (max-width: 1399px) {
    .responsive-grid > div {
        width: 48.717948717948715%;
    }

        .responsive-grid > div:nth-child(odd) {
            margin-left: 0;
        }
}

@media (max-width: 979px) {
    .responsive-grid > div {
        margin-left: 0;
        width: 100%;
    }
}

@media (max-width: 479px) {
}

/* Filter bar*/
.controlBar{
    margin-top: 0em;
    text-align: center;
    background-color: #7D7D8D;
    padding-top: 0.25em;
}

.topBar {
    display:block;
    margin-right:0%;
    margin-left:auto;
    text-align:right;
}

.userObject{
    color:white;
    margin: 0.5em 0.5em 0 0;
    display : inline-block;
    border-radius:0.5em;
}

.container{
    color:white;
}

.alignright{
    text-align:right;
}

.filterLabel{
    font-size:12px;
    text-align:center;
    padding: 0px 0px 0px 0px;
    margin-bottom:0px;
}

.filterSelect select {
    width:100%;
    font-size:small;
    padding: 0px 0px 0px 0px;
    height:20px;
    
}

#containerBar {
    background-color:#333;
    color:white;
    padding: 0px 10px 0px 10px
}



.navbar-inverse .borderOverride {
    border-radius:0px;
}

.selectBars{
    padding: 0px 0px 0px 0px;
}

.media-object.thumbnail{
    height:80px;
    width:80px;
}

#masterDropdown{
    text-align: left;
}

